add_library(small_world_simulation_lib OBJECT
  src/SectionRecord.cpp
  src/StudentRecord.cpp)
target_include_directories(small_world_simulation_lib PUBLIC include)
target_link_libraries(small_world_simulation_lib small_world_io)

add_executable(small_world_simulation src/main.cpp)
target_link_libraries(small_world_simulation small_world_simulation_lib small_world_io)
